--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "carlos/substr-position",
+    "name": "carloscarucce/substr-position",
     "description": "substr_position function for php 7.1+",
     "type": "library",
     "license": "MIT",
